--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="cryptomus" content="285a54ae" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to FortVault, the first modern Discord market bot for effortless browsing and automated delivery of products.">
     <title>FortVault - Your Discord Market Bot</title>
@@ -81,6 +80,17 @@
             background-color: #0f74d0;
         }
 
+        .discord-widget {
+            margin-top: 2rem;
+            text-align: center;
+        }
+
+        iframe {
+            width: 350px;
+            height: 500px;
+            border: none;
+        }
+
         footer {
             background-color: #1e1e1e;
             color: #f5f5f5;
@@ -111,10 +121,16 @@
         </section>
         <section>
             <h2>Get Started</h2>
-            <p>To bring FortVault to your server and explore its capabilities, click the button below:</p>
+            <p>To bring FortVault to your server and explore its capabilities, click one of the buttons below:</p>
             <div class="cta">
                 <a href="https://discord.com/oauth2/authorize?client_id=1289852024107831316">Invite FortVault</a>
+                <br><br>
+                <a href="https://discord.gg/fortvault" target="_blank">Join Our Discord Server</a>
             </div>
+        </section>
+        <section class="discord-widget">
+            <h2>Community Stats</h2>
+            <iframe src="https://discord.com/widget?id=1324585061223497842&theme=dark" allowtransparency="true"></iframe>
         </section>
     </main>
     <footer>
