--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="cryptomus" content="285a54ae" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to FortVault, the first modern Discord market bot for effortless browsing and automated delivery of products.">
     <title>FortVault - Your Discord Market Bot</title>
