--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="cryptomus" content="285a54ae" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to FortVault, the first modern Discord market bot for effortless browsing and automated delivery of products.">
     <title>FortVault - Your Discord Market Bot</title>
@@ -67,6 +66,7 @@
         }
 
         .cta a {
+            display: inline-block;
             text-decoration: none;
             background-color: #1e90ff;
             color: white;
@@ -74,6 +74,7 @@
             border-radius: 8px;
             font-weight: bold;
             font-size: 1.2rem;
+            margin: 0.5rem;
             transition: background-color 0.3s ease;
         }
 
@@ -125,13 +126,12 @@
             <p>To bring FortVault to your server and explore its capabilities, click one of the buttons below:</p>
             <div class="cta">
                 <a href="https://discord.com/oauth2/authorize?client_id=1289852024107831316">Invite FortVault</a>
-                <br><br>
                 <a href="https://discord.gg/fortvault" target="_blank">Join Our Discord Server</a>
             </div>
         </section>
         <section class="discord-widget">
             <h2>Community Stats</h2>
-            <iframe src="https://discord.com/widget?id=1324585061223497842&theme=dark" allowtransparency="true"></iframe>
+            <iframe src="https://discord.com/widget?id=fortvault&theme=dark" allowtransparency="true"></iframe>
         </section>
     </main>
     <footer>
