--- a/index.html
+++ b/index.html
@@ -2,41 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="cryptomus" content="285a54ae" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to FortVault, the first modern Discord market bot for effortless browsing and automated delivery of products.">
     <title>FortVault - Your Discord Market Bot</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         body {
             font-family: 'Roboto', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #121212;
+            background: linear-gradient(135deg, #1e90ff, #121212);
             color: #f5f5f5;
+            overflow-x: hidden;
         }
 
         header {
-            background-color: #1e90ff;
+            background: #1e90ff;
             color: white;
-            padding: 1.5rem 2rem;
+            padding: 2rem;
             text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            animation: slide-down 1s ease;
         }
 
         header h1 {
             margin: 0;
-            font-size: 3rem;
+            font-size: 3.5rem;
+            letter-spacing: 2px;
         }
 
         header p {
             margin: 0.5rem 0 0;
-            font-size: 1.25rem;
+            font-size: 1.5rem;
         }
 
         main {
             padding: 2rem;
             max-width: 1200px;
             margin: 0 auto;
+            animation: fade-in 1.5s ease;
         }
 
         section {
@@ -76,11 +81,12 @@
             font-weight: bold;
             font-size: 1.2rem;
             margin: 0.5rem;
-            transition: background-color 0.3s ease;
+            transition: transform 0.3s ease, background-color 0.3s ease;
         }
 
         .cta a:hover {
             background-color: #0f74d0;
+            transform: scale(1.1);
         }
 
         .discord-widget {
@@ -92,6 +98,9 @@
             width: 350px;
             height: 500px;
             border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            animation: fade-in 2s ease;
         }
 
         footer {
@@ -100,6 +109,25 @@
             text-align: center;
             padding: 1.5rem 0;
             margin-top: 2rem;
+            font-size: 0.9rem;
+        }
+
+        @keyframes slide-down {
+            from {
+                transform: translateY(-100%);
+            }
+            to {
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
@@ -126,7 +154,7 @@
             <h2>Get Started</h2>
             <p>To bring FortVault to your server and explore its capabilities, click one of the buttons below:</p>
             <div class="cta">
-                <a href="https://discord.com/oauth2/authorize?client_id=1289852024107831316">Invite FortVault</a>
+                <a href="https://discord.com/oauth2/authorize?client_id=1289852024107831316" target="_blank">Invite FortVault</a>
                 <a href="https://discord.gg/fortvault" target="_blank">Join Our Discord Server</a>
             </div>
         </section>
